; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress.c_test_want_only_once.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress.c_test_want_only_once.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event = type { i32 }
%struct.timeval = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Want read only once: \00", align 1
@pair = common dso_local global i32* null, align 8
@TEST1 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"write\00", align 1
@EV_READ = common dso_local global i32 0, align 4
@read_once_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_want_only_once to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_want_only_once() #0 {
  %1 = alloca %struct.event, align 4
  %2 = alloca %struct.timeval, align 4
  %3 = call i32 @setup_test(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %4 = load i32*, i32** @pair, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @TEST1, align 4
  %8 = load i32, i32* @TEST1, align 4
  %9 = call i64 @strlen(i32 %8)
  %10 = add nsw i64 %9, 1
  %11 = call i64 @write(i32 %6, i32 %7, i64 %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %0
  %14 = call i32 @tt_fail_perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %0
  %16 = call i32 @evutil_timerclear(%struct.timeval* %2)
  %17 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  store i32 300000, i32* %17, align 4
  %18 = call i32 @event_loopexit(%struct.timeval* %2)
  %19 = load i32*, i32** @pair, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @EV_READ, align 4
  %23 = load i32, i32* @read_once_cb, align 4
  %24 = call i32 @event_set(%struct.event* %1, i32 %21, i32 %22, i32 %23, %struct.event* %1)
  %25 = call i32 @event_add(%struct.event* %1, i32* null)
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %29

27:                                               ; preds = %15
  %28 = call i32 @exit(i32 1) #3
  unreachable

29:                                               ; preds = %15
  %30 = call i32 (...) @event_dispatch()
  %31 = call i32 (...) @cleanup_test()
  ret void
}

declare dso_local i32 @setup_test(i8*) #1

declare dso_local i64 @write(i32, i32, i64) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @tt_fail_perror(i8*) #1

declare dso_local i32 @evutil_timerclear(%struct.timeval*) #1

declare dso_local i32 @event_loopexit(%struct.timeval*) #1

declare dso_local i32 @event_set(%struct.event*, i32, i32, i32, %struct.event*) #1

declare dso_local i32 @event_add(%struct.event*, i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @event_dispatch(...) #1

declare dso_local i32 @cleanup_test(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
